--- a/Prelim_Exam/index.html
+++ b/Prelim_Exam/index.html
@@ -20,11 +20,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
+	<!--Test link below for fonts-->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300&family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
     <title>Santonil, Mark Angelo P. - Prelim</title>
 </head>
 <body>
     <div>
-        <img src="images/window_head.svg" alt="window_header">
+        <img src="images/window_head.svg" alt="window_header" class="animated fadeInDown">
             <div>
             <!--This contains the upper part of the website where it will display the title and 
             the contents of the website-->
@@ -37,7 +41,7 @@
                                 <br>
                                 <div id="title-box">
                                     <div class="page">
-                                        <h2 style="text-align: center;" id="typewriter">< CHEAT SHEET ></h2>
+                                        <h2 style="text-align: center;" id="typewriter" >< CHEAT SHEET ></h2>
                                             <p style="text-align: center;" id="typewriter">HTML lays the foundation, while CSS makes the experience easier, more engaging or more effecient. Snippets allow you to modify certain style elements faster by reducing HTTP requests. Here's what you <br>
                                                 need to know about HTML and CSS before you start designing your blog or website.</p>
                                         <hr class="footer-hr">
@@ -61,36 +65,47 @@
         </h3>
     </div>
     <!--This uses the flexbox on bootstrap for ease of access on arrangement of the columns-->
-    <div  >
+    <div class="animated fadeInDown">
         <div class="row" alt="max-width: 100%;">
           <div class="col"style="background-color: #a3d6da;">
             <br>
             <img src="images/okay.png">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." </p>
+			<hr class="footer-hr">
+			<h3 style="text-align: center; color: #669fa6;" id="typewriter">HTML</h3>
+			<hr class="footer-hr">
+            <p id="thin" style="text-align: center;">An Acronym for Hyper text Markup Language, this computer "language" allows you to create web content, navigate around the web, and define certain types of content. </p>
           </div>
           <div class="col"style="background-color: #f48772;">
             <br>
             <img src="images/css.png">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." </p>
-
+			<hr class="footer-hr">
+			<h3 style="text-align: center; color: #9c311d;" id="typewriter">CSS</h3>
+			<hr class="footer-hr">
+            <p id="thin" style="text-align: center;">An acronym for Cascading Style Sheet, this digital technology allows you to control the appearance placement, and function certain elements on your web pages, like page position, shape, size, and colors.</p>
           </div>
           <div class="col"style="background-color: #bbd693;">
             <br>
             <img src="images/code.png">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." </p>
-
+			<hr class="footer-hr">
+			<h3 style="text-align: center; color: #567529;" id="typewriter">SNIPPETS</h3>
+			<hr class="footer-hr">
+			<p id="thin" style="text-align: center;">Short reusable sections of programming that allows you to minimize repitition and clarity function.</p>
           </div>
           <div class="col"style="background-color: #f9e17d;">
             <br>
             <img src="images/tag.png">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." </p>
-
+			<hr class="footer-hr">
+			<h3 style="text-align: center; color: #d5b934;" id="typewriter">TAGS</h3>
+			<hr class="footer-hr">
+			<p id="thin" style="text-align: center;">Define HTML elements.</p>
           </div>
           <div class="col"style="background-color: #f8b46b;">
             <br>
             <img src="images/chain.png">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." </p>
-
+			<hr class="footer-hr">
+			<h3 style="text-align: center; color: #d57d24;" id="typewriter">HYPERLINK</h3>
+			<hr class="footer-hr">
+			<p id="thin" style="text-align: center;">An element that points to another page, Image or text within your site or anywhere else on the web.</p>
           </div>
         </div>
     </div>
