--- a/Prelim_Exam/index.html
+++ b/Prelim_Exam/index.html
@@ -67,45 +67,105 @@
     <!--This uses the flexbox on bootstrap for ease of access on arrangement of the columns-->
     <div class="animated fadeInDown">
         <div class="row" alt="max-width: 100%;">
-          <div class="col"style="background-color: #a3d6da;">
+          <div class="col image"style="background-color: #a3d6da;" id="parent">
             <br>
-            <img src="images/okay.png">
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<img src="images/okay.png">
 			<hr class="footer-hr">
 			<h3 style="text-align: center; color: #669fa6;" id="typewriter">HTML</h3>
 			<hr class="footer-hr">
-            <p id="thin" style="text-align: center;">An Acronym for Hyper text Markup Language, this computer "language" allows you to create web content, navigate around the web, and define certain types of content. </p>
+            <div class="blur__overlay blur__overlay--primary">
+			<div id="hover-content">
+				<div class="blur__title" style="text-align: center; color: #669fa6;" id="typewriter">HTML</div>
+			    <p id="thin" class="align" style="text-align: center;">An Acronym for Hyper text Markup Language, this computer "language" allows you to create web content, navigate around the web, and define certain types of content. </p>
+			</div>
+			</div>
           </div>
-          <div class="col"style="background-color: #f48772;">
+          <div class="col"style="background-color: #f48772;" id="parent">
             <br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
             <img src="images/css.png">
 			<hr class="footer-hr">
 			<h3 style="text-align: center; color: #9c311d;" id="typewriter">CSS</h3>
 			<hr class="footer-hr">
-            <p id="thin" style="text-align: center;">An acronym for Cascading Style Sheet, this digital technology allows you to control the appearance placement, and function certain elements on your web pages, like page position, shape, size, and colors.</p>
+            <div class="blur__overlay blur__overlay--primary">
+			<div id="hover-content">
+				<div class="blur__title" style="text-align: center; color: #f48772;" id="typewriter">CSS</div>
+			    <p id="thin" class="align" style="text-align: center;">An acronym for Cascading Style Sheet, this digital technology allows you to control the appearance placement, and function certain elements on your web pages, like page position, shape, size, and colors.</p>
+			</div>
+			</div>
           </div>
-          <div class="col"style="background-color: #bbd693;">
+          <div class="col"style="background-color: #bbd693;" id="parent">
             <br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
             <img src="images/code.png">
 			<hr class="footer-hr">
 			<h3 style="text-align: center; color: #567529;" id="typewriter">SNIPPETS</h3>
 			<hr class="footer-hr">
-			<p id="thin" style="text-align: center;">Short reusable sections of programming that allows you to minimize repitition and clarity function.</p>
+            <div class="blur__overlay blur__overlay--primary">
+			<div id="hover-content">
+				<div class="blur__title" style="text-align: center; color: #bbd693;" id="typewriter">CSS</div>
+			    <p id="thin" style="text-align: center;">Short reusable sections of programming that allows you to minimize repitition and clarity function.</p>
+			</div>
+			</div>
           </div>
-          <div class="col"style="background-color: #f9e17d;">
+          <div class="col"style="background-color: #f9e17d;" id="parent">
             <br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
             <img src="images/tag.png">
 			<hr class="footer-hr">
 			<h3 style="text-align: center; color: #d5b934;" id="typewriter">TAGS</h3>
 			<hr class="footer-hr">
-			<p id="thin" style="text-align: center;">Define HTML elements.</p>
+            <div class="blur__overlay blur__overlay--primary">
+			<div id="hover-content">
+				<div class="blur__title" style="text-align: center; color: #d5b934;" id="typewriter">TAGS</div>
+			    <p id="thin" class="align" style="text-align: center;">Define HTML elements.</p>
+			</div>
+			</div>
           </div>
-          <div class="col"style="background-color: #f8b46b;">
+          <div class="col"style="background-color: #f8b46b;" id="parent">
             <br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
             <img src="images/chain.png">
 			<hr class="footer-hr">
 			<h3 style="text-align: center; color: #d57d24;" id="typewriter">HYPERLINK</h3>
 			<hr class="footer-hr">
-			<p id="thin" style="text-align: center;">An element that points to another page, Image or text within your site or anywhere else on the web.</p>
+            <div class="blur__overlay blur__overlay--primary">
+			<div id="hover-content">
+				<div class="blur__title" style="text-align: center; color: #d57d24;" id="typewriter">HYPERLINK</div>
+			    <p id="thin" class="align" style="text-align: center;">An element that points to another page, Image or text within your site or anywhere else on the web.</p>
+			</div>
+			</div>
           </div>
         </div>
     </div>
