--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <title>Santonil, Mark Angelo P. - Prelim</title>
 </head>
 <body>
-    <div>
+    <div id="header">
         <img src="images/window_head.svg" alt="window_header" class="animated fadeInDown">
             <div>
             <!--This contains the upper part of the website where it will display the title and 
@@ -59,11 +59,6 @@
            </div>
     <!--The second part of the mockup where the section below is the 
     lexicons for beginners -->
-    <br>
-    <br>
-    <br>
-    <br>
-    <br> 
     <div class="padlex animated fadeInDown">
         <h3 style="text-align: center;" id="typewriter-bold">
             A  LEXICON  FOR  BEGINNERS
